--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "device-detector-js": "^3.0.0",
-    "express": "~4.16.1"
+    "express": "~4.16.1",
+    "pm2": "^5.1.2"
   }
 }
