--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "device-detector-js": "^3.0.0",
     "express": "~4.16.1",
+    "mongoose": "^6.0.13",
     "nodemon": "^2.0.15"
   }
 }
