--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "device-detector-js": "^3.0.0",
     "express": "~4.16.1",
     "mongoose": "^6.0.13",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.15"
   }
 }
